# libft

./: !_ft_strchr.c  !ft_bzero.c  !ft_memset.c  .DS_Store~29da0a3fb00d4eeeb4b8fe16d5b80c43af78ef6b  .DS_Store~HEAD_0  .ft_itoa.c.swp  .gitignore  .gitignore.swp  .libft.h.swp  CMakeLists.txt  Makefile  README.md  a.out  author  ft_atoi.c  ft_bzero.c  ft_count_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nblen.c  ft_putchar.c  ft_putchar_fd.c  (+39 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: get_next_line.h  libft.h
incs/: ft_printf.h  get_next_line.h  libft.h
srcs/: .test.c.swp  bin_to_int.c  bonuses_1.c  csp_module.c  float_module.c  ft_allocate_mx.c  ft_atoi.c  ft_bzero.c  ft_cntwrds.c  ft_flush_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstfree.c  ft_lstlen.c  ft_lstmap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_new_array.c  ft_new_ptr_array.c  ft_pf_csp_module.c  ft_pf_dnum_utilities.c  ft_pf_place_num.c  ft_pf_process_utilities.c  ft_print_array.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  (+46 more)
srcs/ft_libc/: ft_abs.c  ft_allocate_mx.c  ft_free_2d_array.c  ft_min.c  ft_nblen.c  ft_new_array.c  ft_strnlen.c
srcs/ft_libc/additional_functions/: ft_memalloc.c  ft_putchar.c  ft_putendl.c  ft_putstr_fd.c  ft_strclr.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strndup.c  ft_strnequ.c  ft_strnew.c  ft_strsplit.c  ft_strsub.c
srcs/ft_libc/libc_functions/: ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_isalpha.c  ft_isdigit.c  ft_memchr.c  ft_memcpy.c  ft_strcpy.c  ft_strdup.c  ft_strncat.c  ft_strncmp.c  ft_strrchr.c  ft_strstr.c  ft_tolower.c
srcs/ft_lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstpushback.c
srcs/ft_printf/: ft_pf_bin_to_int.c  ft_pf_bonuses_1.c  ft_pf_csp_module.c  ft_pf_dnum_utilities.c  ft_pf_expand_argument.c  ft_pf_float_module.c  ft_pf_itoa_base.c  ft_pf_num_utilities.c  ft_pf_place_num.c  ft_pf_pow.c  ft_pf_process_utilities.c  ft_pf_processings.c  ft_printf.c  ft_vfprintf.c
srcs/ft_vector/: ft_vec_utils.c
